{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 71,
  "lineage": "49aaa5f5-c238-6705-0db8-7da01c50c4c5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326394326225:subnet/subnet-2cf8cc58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-2cf8cc58",
            "map_public_ip_on_launch": true,
            "owner_id": "326394326225",
            "state": "available",
            "vpc_id": "vpc-7b9f8b19"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326394326225:subnet/subnet-32dacf50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-32dacf50",
            "map_public_ip_on_launch": true,
            "owner_id": "326394326225",
            "state": "available",
            "vpc_id": "vpc-7b9f8b19"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326394326225:subnet/subnet-df2d7b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-df2d7b99",
            "map_public_ip_on_launch": true,
            "owner_id": "326394326225",
            "state": "available",
            "vpc_id": "vpc-7b9f8b19"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326394326225:vpc/vpc-7b9f8b19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-a1e9fdc3",
            "default_route_table_id": "rtb-57b3a735",
            "default_security_group_id": "sg-17e0f275",
            "dhcp_options_id": "dopt-d4777fb6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-7b9f8b19",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-57b3a735",
            "owner_id": "326394326225"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09c6723c6c24250c9",
            "arn": "arn:aws:ec2:us-west-2:326394326225:instance/i-0ef89c89d8ab293b6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-0ef89c89d8ab293b6",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-058f6099cb72a9db6",
            "private_dns": "ip-172-31-30-72.us-west-2.compute.internal",
            "private_ip": "172.31.30.72",
            "public_dns": "ec2-54-185-178-174.us-west-2.compute.amazonaws.com",
            "public_ip": "54.185.178.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0bffd5bfb74f347e3",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2cf8cc58",
            "tags": {
              "Name": "demo-control_plane-1",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-026b117ea493d0284",
              "sg-04fdeacb78395a4e5"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09c6723c6c24250c9",
            "arn": "arn:aws:ec2:us-west-2:326394326225:instance/i-0380812b7920a0e64",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-0380812b7920a0e64",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ff9b3c693d30c052",
            "private_dns": "ip-172-31-40-26.us-west-2.compute.internal",
            "private_ip": "172.31.40.26",
            "public_dns": "ec2-34-222-152-89.us-west-2.compute.amazonaws.com",
            "public_ip": "34.222.152.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0a032619ea9610a5a",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-32dacf50",
            "tags": {
              "Name": "demo-control_plane-2",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-026b117ea493d0284",
              "sg-04fdeacb78395a4e5"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09c6723c6c24250c9",
            "arn": "arn:aws:ec2:us-west-2:326394326225:instance/i-050815449cec5153c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-050815449cec5153c",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0444bce90feb664c4",
            "private_dns": "ip-172-31-6-195.us-west-2.compute.internal",
            "private_ip": "172.31.6.195",
            "public_dns": "ec2-52-36-178-62.us-west-2.compute.amazonaws.com",
            "public_ip": "52.36.178.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-07cd0b3d00aeb69a6",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-df2d7b99",
            "tags": {
              "Name": "demo-control_plane-3",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-026b117ea493d0284",
              "sg-04fdeacb78395a4e5"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:326394326225:loadbalancer/net/demo-api-lb/a1537d01e9bd16c6",
            "arn_suffix": "net/demo-api-lb/a1537d01e9bd16c6",
            "dns_name": "demo-api-lb-a1537d01e9bd16c6.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:326394326225:loadbalancer/net/demo-api-lb/a1537d01e9bd16c6",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "demo-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-2cf8cc58"
              },
              {
                "subnet_id": "subnet-32dacf50"
              },
              {
                "subnet_id": "subnet-df2d7b99"
              }
            ],
            "subnets": [
              "subnet-2cf8cc58",
              "subnet-32dacf50",
              "subnet-df2d7b99"
            ],
            "tags": {
              "Cluster": "demo",
              "kubernetes.io/cluster/demo": "shared"
            },
            "vpc_id": "vpc-7b9f8b19",
            "zone_id": "Z18D5FSROUN65G"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:326394326225:listener/net/demo-api-lb/a1537d01e9bd16c6/2a722e8a0619b87a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:326394326225:targetgroup/demo-api/6e795b557637beee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:326394326225:listener/net/demo-api-lb/a1537d01e9bd16c6/2a722e8a0619b87a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:326394326225:loadbalancer/net/demo-api-lb/a1537d01e9bd16c6",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:326394326225:targetgroup/demo-api/6e795b557637beee",
            "arn_suffix": "targetgroup/demo-api/6e795b557637beee",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:326394326225:targetgroup/demo-api/6e795b557637beee",
            "lambda_multi_value_headers_enabled": false,
            "name": "demo-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-7b9f8b19"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:326394326225:targetgroup/demo-api/6e795b557637beee-20191105223756236900000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:326394326225:targetgroup/demo-api/6e795b557637beee",
            "target_id": "i-0ef89c89d8ab293b6"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:326394326225:targetgroup/demo-api/6e795b557637beee-20191105223756658900000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:326394326225:targetgroup/demo-api/6e795b557637beee",
            "target_id": "i-0380812b7920a0e64"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:326394326225:targetgroup/demo-api/6e795b557637beee-20191105223756331800000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:326394326225:targetgroup/demo-api/6e795b557637beee",
            "target_id": "i-050815449cec5153c"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326394326225:security-group/sg-04fdeacb78395a4e5",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fdeacb78395a4e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "demo-common",
            "name_prefix": null,
            "owner_id": "326394326225",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-7b9f8b19"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:326394326225:security-group/sg-026b117ea493d0284",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-026b117ea493d0284",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "demo-control_planes",
            "name_prefix": null,
            "owner_id": "326394326225",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-7b9f8b19"
          }
        }
      ]
    }
  ]
}